add Schema Category swagger
